--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./pics/favicon.ico" type="image/x-icon">
+    <title>Kutyák</title>
 </head>
 <body>
-    
+    <h1>Kutyák Főoldal</h1>
 </body>
 </html>
